{
  "version": 4,
  "terraform_version": "1.12.0",
  "serial": 160,
  "lineage": "03e0991a-4960-fba9-a50b-c4f765959a9a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-098fa80cfeb5954cc",
            "arn": "arn:aws:ec2:us-east-1:125755581655:elastic-ip/eipalloc-098fa80cfeb5954cc",
            "association_id": "eipassoc-0d374dce2b3551ddd",
            "domain": "vpc",
            "id": "eipalloc-098fa80cfeb5954cc",
            "network_border_group": "us-east-1",
            "network_interface": "eni-08f862c91a3458523",
            "private_dns": "ip-10-0-0-131.ec2.internal",
            "private_ip": "10.0.0.131",
            "public_dns": "ec2-44-205-154-63.compute-1.amazonaws.com",
            "public_ip": "44.205.154.63",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "flask-crud-r0984339-nat-eip-us-east-1a",
              "Terraform": "true",
              "project": "flask-crud-r0984339"
            },
            "tags_all": {
              "Name": "flask-crud-r0984339-nat-eip-us-east-1a",
              "Terraform": "true",
              "project": "flask-crud-r0984339"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0de34e1df024bc5de",
            "arn": "arn:aws:ec2:us-east-1:125755581655:elastic-ip/eipalloc-0de34e1df024bc5de",
            "association_id": "eipassoc-012bacd7f087d9a44",
            "domain": "vpc",
            "id": "eipalloc-0de34e1df024bc5de",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0a4e4d6cd5aed884d",
            "private_dns": "ip-10-0-1-71.ec2.internal",
            "private_ip": "10.0.1.71",
            "public_dns": "ec2-44-213-242-207.compute-1.amazonaws.com",
            "public_ip": "44.213.242.207",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "flask-crud-r0984339-nat-eip-us-east-1b",
              "Terraform": "true",
              "project": "flask-crud-r0984339"
            },
            "tags_all": {
              "Name": "flask-crud-r0984339-nat-eip-us-east-1b",
              "Terraform": "true",
              "project": "flask-crud-r0984339"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:125755581655:internet-gateway/igw-0940b5cd5700b0cae",
            "id": "igw-0940b5cd5700b0cae",
            "owner_id": "125755581655",
            "tags": {
              "Name": "flask-crud-r0984339-igw",
              "Terraform": "true",
              "project": "flask-crud-r0984339"
            },
            "tags_all": {
              "Name": "flask-crud-r0984339-igw",
              "Terraform": "true",
              "project": "flask-crud-r0984339"
            },
            "vpc_id": "vpc-0dd7312392382b22b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:125755581655:loadbalancer/app/flask-crud-r0984339-alb/2284cf803c86eb13",
            "arn_suffix": "app/flask-crud-r0984339-alb/2284cf803c86eb13",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "flask-crud-r0984339-alb-334920747.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:125755581655:loadbalancer/app/flask-crud-r0984339-alb/2284cf803c86eb13",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "flask-crud-r0984339-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-01f315bca122cc0ae"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01f31712742b6af14"
              },
              {
                "subnet_id": "subnet-057f4fea5d57c74e3"
              }
            ],
            "subnets": [
              "subnet-01f31712742b6af14",
              "subnet-057f4fea5d57c74e3"
            ],
            "tags": {
              "Terraform": "true",
              "project": "flask-crud-r0984339"
            },
            "tags_all": {
              "Terraform": "true",
              "project": "flask-crud-r0984339"
            },
            "vpc_id": "vpc-0dd7312392382b22b",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:125755581655:listener/app/flask-crud-r0984339-alb/2284cf803c86eb13/3ab68ac84ba04581",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:125755581655:targetgroup/fctg-20250518151131288400000001/b43b576ea4ebc100",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:125755581655:listener/app/flask-crud-r0984339-alb/2284cf803c86eb13/3ab68ac84ba04581",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:125755581655:loadbalancer/app/flask-crud-r0984339-alb/2284cf803c86eb13",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.app_alb",
            "aws_lb_target_group.app_tg",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:125755581655:targetgroup/fctg-20250518151131288400000001/b43b576ea4ebc100",
            "arn_suffix": "targetgroup/fctg-20250518151131288400000001/b43b576ea4ebc100",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:125755581655:targetgroup/fctg-20250518151131288400000001/b43b576ea4ebc100",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "fctg-20250518151131288400000001",
            "name_prefix": "fctg-",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Terraform": "true",
              "project": "flask-crud-r0984339"
            },
            "tags_all": {
              "Terraform": "true",
              "project": "flask-crud-r0984339"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0dd7312392382b22b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-098fa80cfeb5954cc",
            "association_id": "eipassoc-0d374dce2b3551ddd",
            "connectivity_type": "public",
            "id": "nat-0a62895c8d1e379c6",
            "network_interface_id": "eni-08f862c91a3458523",
            "private_ip": "10.0.0.131",
            "public_ip": "44.205.154.63",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-057f4fea5d57c74e3",
            "tags": {
              "Name": "flask-crud-r0984339-nat-gw-us-east-1a",
              "Terraform": "true",
              "project": "flask-crud-r0984339"
            },
            "tags_all": {
              "Name": "flask-crud-r0984339-nat-gw-us-east-1a",
              "Terraform": "true",
              "project": "flask-crud-r0984339"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.gw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0de34e1df024bc5de",
            "association_id": "eipassoc-012bacd7f087d9a44",
            "connectivity_type": "public",
            "id": "nat-0545206b1f74abe6e",
            "network_interface_id": "eni-0a4e4d6cd5aed884d",
            "private_ip": "10.0.1.71",
            "public_ip": "44.213.242.207",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01f31712742b6af14",
            "tags": {
              "Name": "flask-crud-r0984339-nat-gw-us-east-1b",
              "Terraform": "true",
              "project": "flask-crud-r0984339"
            },
            "tags_all": {
              "Name": "flask-crud-r0984339-nat-gw-us-east-1b",
              "Terraform": "true",
              "project": "flask-crud-r0984339"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.gw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:125755581655:route-table/rtb-02bd8639a5ac666be",
            "id": "rtb-02bd8639a5ac666be",
            "owner_id": "125755581655",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a62895c8d1e379c6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "flask-crud-r0984339-private-rt-us-east-1a",
              "Terraform": "true",
              "project": "flask-crud-r0984339"
            },
            "tags_all": {
              "Name": "flask-crud-r0984339-private-rt-us-east-1a",
              "Terraform": "true",
              "project": "flask-crud-r0984339"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd7312392382b22b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:125755581655:route-table/rtb-09c4fe8bc38086ea3",
            "id": "rtb-09c4fe8bc38086ea3",
            "owner_id": "125755581655",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0545206b1f74abe6e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "flask-crud-r0984339-private-rt-us-east-1b",
              "Terraform": "true",
              "project": "flask-crud-r0984339"
            },
            "tags_all": {
              "Name": "flask-crud-r0984339-private-rt-us-east-1b",
              "Terraform": "true",
              "project": "flask-crud-r0984339"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd7312392382b22b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:125755581655:route-table/rtb-0e906f3b02c48d3cd",
            "id": "rtb-0e906f3b02c48d3cd",
            "owner_id": "125755581655",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0940b5cd5700b0cae",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "flask-crud-r0984339-public-rt",
              "Terraform": "true",
              "project": "flask-crud-r0984339"
            },
            "tags_all": {
              "Name": "flask-crud-r0984339-public-rt",
              "Terraform": "true",
              "project": "flask-crud-r0984339"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd7312392382b22b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07053b007c329cbc4",
            "route_table_id": "rtb-02bd8639a5ac666be",
            "subnet_id": "subnet-061924af425a3e80d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-066baf707fb0e3193",
            "route_table_id": "rtb-09c4fe8bc38086ea3",
            "subnet_id": "subnet-0f6f23f87b0abb05e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e3bb71c9ea14a4f4",
            "route_table_id": "rtb-0e906f3b02c48d3cd",
            "subnet_id": "subnet-057f4fea5d57c74e3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b54cab27a0d4cd90",
            "route_table_id": "rtb-0e906f3b02c48d3cd",
            "subnet_id": "subnet-01f31712742b6af14"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:125755581655:security-group/sg-01f315bca122cc0ae",
            "description": "Allow HTTP/S traffic from internet to ALB",
            "egress": [],
            "id": "sg-01f315bca122cc0ae",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "flask-crud-r0984339-alb-sg",
            "name_prefix": "",
            "owner_id": "125755581655",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "flask-crud-r0984339-alb-sg",
              "Terraform": "true",
              "Tier": "frontend",
              "project": "flask-crud-r0984339"
            },
            "tags_all": {
              "Name": "flask-crud-r0984339-alb-sg",
              "Terraform": "true",
              "Tier": "frontend",
              "project": "flask-crud-r0984339"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd7312392382b22b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_aurora",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:125755581655:security-group/sg-05d41c8b040323c67",
            "description": "Allow PostgreSQL traffic from ECS Service",
            "egress": [],
            "id": "sg-05d41c8b040323c67",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow ECS tasks to access DB",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-042f82b5f9aa762e7"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "flask-crud-r0984339-db-aurora-sg",
            "name_prefix": "",
            "owner_id": "125755581655",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "flask-crud-r0984339-db-sg",
              "Terraform": "true",
              "Tier": "database",
              "project": "flask-crud-r0984339"
            },
            "tags_all": {
              "Name": "flask-crud-r0984339-db-sg",
              "Terraform": "true",
              "Tier": "database",
              "project": "flask-crud-r0984339"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd7312392382b22b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:125755581655:security-group/sg-042f82b5f9aa762e7",
            "description": "Allow traffic from ALB to ECS tasks and allow outbound to DB and Internet (via NAT)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic from ECS tasks",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-042f82b5f9aa762e7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow ALB to ECS Service",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01f315bca122cc0ae"
                ],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "flask-crud-r0984339-ecs-service-sg",
            "name_prefix": "",
            "owner_id": "125755581655",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "flask-crud-r0984339-ecs-sg",
              "Terraform": "true",
              "Tier": "application",
              "project": "flask-crud-r0984339"
            },
            "tags_all": {
              "Name": "flask-crud-r0984339-ecs-sg",
              "Terraform": "true",
              "Tier": "application",
              "project": "flask-crud-r0984339"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd7312392382b22b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_alb_to_ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow ALB to ECS Service",
            "from_port": 5000,
            "id": "sgrule-2988273364",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-042f82b5f9aa762e7",
            "security_group_rule_id": "sgr-0dc8af1f6a58e2f68",
            "self": false,
            "source_security_group_id": "sg-01f315bca122cc0ae",
            "timeouts": null,
            "to_port": 5000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs_service",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ecs_to_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow ECS tasks to access DB",
            "from_port": 5432,
            "id": "sgrule-3202721819",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05d41c8b040323c67",
            "security_group_rule_id": "sgr-051820dc988655838",
            "self": false,
            "source_security_group_id": "sg-042f82b5f9aa762e7",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.db_aurora",
            "aws_security_group.ecs_service",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outbound traffic from ECS tasks",
            "from_port": 0,
            "id": "sgrule-986817752",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-042f82b5f9aa762e7",
            "security_group_rule_id": "sgr-04e1e534835cc1a7a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ecs_service",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:125755581655:subnet/subnet-061924af425a3e80d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-061924af425a3e80d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "125755581655",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "flask-crud-r0984339-private-subnet-us-east-1a",
              "Terraform": "true",
              "Tier": "application-database",
              "project": "flask-crud-r0984339"
            },
            "tags_all": {
              "Name": "flask-crud-r0984339-private-subnet-us-east-1a",
              "Terraform": "true",
              "Tier": "application-database",
              "project": "flask-crud-r0984339"
            },
            "vpc_id": "vpc-0dd7312392382b22b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:125755581655:subnet/subnet-0f6f23f87b0abb05e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f6f23f87b0abb05e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "125755581655",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "flask-crud-r0984339-private-subnet-us-east-1b",
              "Terraform": "true",
              "Tier": "application-database",
              "project": "flask-crud-r0984339"
            },
            "tags_all": {
              "Name": "flask-crud-r0984339-private-subnet-us-east-1b",
              "Terraform": "true",
              "Tier": "application-database",
              "project": "flask-crud-r0984339"
            },
            "vpc_id": "vpc-0dd7312392382b22b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:125755581655:subnet/subnet-057f4fea5d57c74e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-057f4fea5d57c74e3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "125755581655",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "flask-crud-r0984339-public-subnet-us-east-1a",
              "Terraform": "true",
              "Tier": "frontend",
              "project": "flask-crud-r0984339"
            },
            "tags_all": {
              "Name": "flask-crud-r0984339-public-subnet-us-east-1a",
              "Terraform": "true",
              "Tier": "frontend",
              "project": "flask-crud-r0984339"
            },
            "vpc_id": "vpc-0dd7312392382b22b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:125755581655:subnet/subnet-01f31712742b6af14",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01f31712742b6af14",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "125755581655",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "flask-crud-r0984339-public-subnet-us-east-1b",
              "Terraform": "true",
              "Tier": "frontend",
              "project": "flask-crud-r0984339"
            },
            "tags_all": {
              "Name": "flask-crud-r0984339-public-subnet-us-east-1b",
              "Terraform": "true",
              "Tier": "frontend",
              "project": "flask-crud-r0984339"
            },
            "vpc_id": "vpc-0dd7312392382b22b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:125755581655:vpc/vpc-0dd7312392382b22b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-039569f5867779c64",
            "default_route_table_id": "rtb-015646d854d87a546",
            "default_security_group_id": "sg-0fc11d21fc065399d",
            "dhcp_options_id": "dopt-08ac07f6e82364735",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dd7312392382b22b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-015646d854d87a546",
            "owner_id": "125755581655",
            "tags": {
              "Name": "flask-crud-r0984339-vpc",
              "Terraform": "true",
              "project": "flask-crud-r0984339"
            },
            "tags_all": {
              "Name": "flask-crud-r0984339-vpc",
              "Terraform": "true",
              "project": "flask-crud-r0984339"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}